Image loading experimental

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,9 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <meta name="Genshin Impact Wish Simulator" content="Feel like a whale for once" />
+  <meta name="description" content="Feel like a whale for once" />
   <title>Genshin Impact Wish Simulator</title>
-
   <link rel="preload"
     href="https://lh3.googleusercontent.com/pw/AM-JKLUlg3LbEWMh7eJFuvxc33EYrECX4GgNg5o0lni660NCObf7nmqDooY632SdByVRLVvKg3AQVUOciyfLGCDVo0FAOOWTsyQHxbOksEYUn9s_kLeC9c9SZ_kUgdyV0p02X2H4fKVIRob78SmHzojVmOP8=s27-no"
     as="image">
@@ -18,6 +17,23 @@
     href="https://lh3.googleusercontent.com/pw/AM-JKLXP-eKG-58kUzEcaBADaedBb862kDb8Rgm70ofuYvN2Z1rncBwKLwlEPZ9ES5nhYcw-WEE6N0L2PEQ29yKjB7JHishvaaE_Uz8kRcTFCR3wYUW1LBS6Jn2kEuNRDa-uq6yBQ3xFsvJnpKXROOHkkRAa=w1303-h676-no"
     as="image">
   <!-- <link rel="preload" href="" as="image"> -->
+
+  <!-- <script>
+
+    let imgs = [
+      "https://lh3.googleusercontent.com/pw/AM-JKLUlg3LbEWMh7eJFuvxc33EYrECX4GgNg5o0lni660NCObf7nmqDooY632SdByVRLVvKg3AQVUOciyfLGCDVo0FAOOWTsyQHxbOksEYUn9s_kLeC9c9SZ_kUgdyV0p02X2H4fKVIRob78SmHzojVmOP8=s27-no",
+      "https://lh3.googleusercontent.com/pw/AM-JKLWF5-BoKknZMrKSOju1XQt5GIzYI5iDy1Fw7ldRkT2XKd-b0CD6df9zSH7nw383GLROAr7W2a6fAFdbJSdaUX7O6FJAihpNYcOLXJ2xgtbZy0ROclFG0UOMrMRHw_XfCst0JCHwn6tN0_s-UtuWbC16=w1366-h768-no",
+      "https://lh3.googleusercontent.com/pw/AM-JKLXP-eKG-58kUzEcaBADaedBb862kDb8Rgm70ofuYvN2Z1rncBwKLwlEPZ9ES5nhYcw-WEE6N0L2PEQ29yKjB7JHishvaaE_Uz8kRcTFCR3wYUW1LBS6Jn2kEuNRDa-uq6yBQ3xFsvJnpKXROOHkkRAa=w1303-h676-no",
+    ];
+
+    for (var i = 0; i < imgs.length; ++i) {
+      var img = new Image();
+      img.src = imgs[i];
+      console.log("hi!")
+    }
+
+    console.log("hello");
+  </script> -->
 </head>
 
 <body>
