Experimental pull video

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,10 @@
   <link rel="preload"
     href="https://lh3.googleusercontent.com/pw/AM-JKLXP-eKG-58kUzEcaBADaedBb862kDb8Rgm70ofuYvN2Z1rncBwKLwlEPZ9ES5nhYcw-WEE6N0L2PEQ29yKjB7JHishvaaE_Uz8kRcTFCR3wYUW1LBS6Jn2kEuNRDa-uq6yBQ3xFsvJnpKXROOHkkRAa=w1303-h676-no"
     as="image">
+  <link rel="preload"
+    href="https://lh3.googleusercontent.com/pw/AM-JKLUlg3LbEWMh7eJFuvxc33EYrECX4GgNg5o0lni660NCObf7nmqDooY632SdByVRLVvKg3AQVUOciyfLGCDVo0FAOOWTsyQHxbOksEYUn9s_kLeC9c9SZ_kUgdyV0p02X2H4fKVIRob78SmHzojVmOP8=s27-no"
+    as="image">
+  <link rel="preload" href="./font/ja-jp.ttf" as="font">
   <!-- <link rel="preload" href="" as="image"> -->
 </head>
 
