--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,10 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+
+  <!-- <video src="./video/31.m4v" mute preload="auto"
+    style="display: none; height: 1px; width: 1px; position: absolute;"></video> -->
+
   <div id="root"></div>
 </body>
 
